/*
 * Copyright 2014 Google Inc. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
package com.google.doubleclick;
option java_outer_classname = "DcExt";

import "openrtb.proto";
import "doubleclick.proto";

//
// OpenRTB Extensions for DoubleClick Ad Exchange (ID=101).
// These "Link" extensions are internal only, not used on-wire.
//

extend com.google.openrtb.BidRequest {
  /** Reference to the corresponding node in the DoubleClick request. */
  optional com.google.doubleclick.BidRequest bidRequest = 101;
}

extend com.google.openrtb.BidRequest.Device {
  /** Reference to the corresponding node in the DoubleClick request. */
  optional com.google.doubleclick.BidRequest.Mobile mobile = 101;
}

extend com.google.openrtb.BidRequest.Impression {
  /** Reference to the corresponding node in the DoubleClick request. */
  optional com.google.doubleclick.BidRequest.AdSlot adSlot = 101;
}

extend com.google.openrtb.BidRequest.Impression.Video {
  /** Reference to the corresponding node in the DoubleClick request. */
  optional com.google.doubleclick.BidRequest.Video video = 101;
}

extend com.google.openrtb.BidRequest.Impression.PMP {
  /** Reference to the corresponding node in the DoubleClick request. */
  optional com.google.doubleclick.BidRequest.AdSlot.MatchingAdData
      adData = 101;
}

extend com.google.openrtb.BidResponse.SeatBid.Bid {
  /** Reference to the corresponding node in the DoubleClick request. */
  optional com.google.doubleclick.BidResponse.Ad ad = 101;
}
